--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
   *******************/
 .header {
   width: 100%;
+  transition: all 0.3s ease-in-out;
 }
 
 .sticky__header {
@@ -10,7 +11,6 @@
   top: 0;
   left: 0;
   z-index: 999;
-  transition-duration: 0.3s;
 }
 
 .top__header {
@@ -27,7 +27,7 @@
   justify-content: space-between;
 }
 
-.logo {
+.logo a {
   display: flex;
   align-items: center;
   column-gap: 8px;
@@ -45,19 +45,39 @@
   color: var(--primary-color);
 }
 .logo p {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   color: var(--gray-4);
+  margin-top: -3px;
 }
 
 /*** search bar */
-.search-bar__warpper {
-  /* display: flex;
+.search {
+  background-color: var(--second-color);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
+  flex-direction: column;
+  z-index: 99;
+  transition: 0.3s ease-in-out;
+}
+.search.active {
+  transform: translateY(0);
+}
+.search__warpper {
+  display: flex;
   justify-content: center;
-  height: 40px; */
-
-  width: 40%;
+  flex-direction: column;
+  width: 70%;
+  position: relative;
+  top: 35px;
 }
 
 .wrrapper__content {
@@ -69,30 +89,94 @@
   height: auto;
 }
 
-.search-bar__input {
+.search__input {
   height: 100%;
   width: 100%;
-  border: none;
+  color: #212529;
   line-height: normal;
   border-radius: 0;
-  border-radius: 20px 0 0 20px;
+  /* border-radius: 20px 0 0 20px; */
   padding: 10px;
-  -webkit-appearance: none;
 }
-.search-bar__input:focus {
+.search__input:focus {
   color: #212529;
   background-color: #fff;
-  border-color: transparent;
+  border-color: var(--primary-color);
   outline: 0;
   box-shadow: unset;
 }
 
-.search-bar__button {
+.search__icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ced4da;
   height: 100%;
   width: 50px;
   border-radius: 0;
-  background-color: var(--primary-color) !important;
-  border-color: var(--primary-color) !important;
+  color: rgb(41, 39, 39);
+  background-color: var(--white-color) !important;
+  /* border-color: var(--primary-color) !important; */
+}
+.search__toggle__close {
+  color: #fff;
+  padding: 0;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column: 3px;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  z-index: 999;
+}
+.search__toggle__close:hover {
+  color: var(--primary-color) !important;
+}
+.search__toggle__close i {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+/** search__resulte **/
+.search__resulte__content {
+  background-color: #fff;
+  height: 100vh;
+  overflow-y: auto;
+}
+.search__resultes {
+}
+.search__resulte__content::-webkit-scrollbar {
+  width: 7px;
+}
+.search__resultes .search__resulte__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ddd;
+  padding: 10px 5px;
+}
+.search__resulte__item__container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  column-gap: 15px;
+}
+.search__resulte__item .img__container {
+  width: 90px;
+  background-color: var(--card-bg-04);
+  border-radius: 5px;
+}
+.search__resulte__item .img__container img {
+  width: 100%;
+}
+.search__resulte__item .item__desc {
 }
 
 /*** nav__icons */
@@ -197,26 +281,22 @@
 /* Responsive Styles 768px */
 @media (max-width: 768px) {
   /* Search Bar */
-  .search-bar__warpper {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    padding: 0 20px;
-    width: 100%;
-    top: 80px;
-    padding-top: 20px;
-    left: 0;
-    background: var(--second-color);
-    z-index: 1;
-    transition: visibility 0.25s ease-in-out, margin-bottom 0.25s ease-in-out;
+  .search__warpper {
+    width: 95%;
+    top: 3rem;
+    position: relative;
   }
-  .search-bar__warpper.is_visible {
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 0.4s ease;
+  .search__resultes {
+    height: calc(100vh - 150px);
+    overflow-y: scroll;
+    margin-bottom: 20px;
   }
-  .wrrapper__content {
-    padding-bottom: 25px;
+  .search__resultes::-webkit-scrollbar {
+    width: 5px !important;
+  }
+
+  .search__resulte__item .btn-primary {
+    display: none;
   }
 
   /* nav__icons */
