--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -188,9 +188,36 @@ img {
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
+.form-control.input-danger {
+  border: 1px solid #dc3545 !important;
+}
+.form-control.input-danger:focus {
+  border-width: 2px !important;
+}
+.form-control.input-danger::placeholder {
+  color: #dc3545 !important;
+}
+
 /* shadows */
 .bg-shadow-1 {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+/* font-weight */
+.fw-500 {
+  font-weight: 500;
+}
+.fw-600 {
+  font-weight: 600;
+}
+.fw-700 {
+  font-weight: 700;
+}
+.fw-800 {
+  font-weight: 800;
+}
+.fw-900 {
+  font-weight: 900;
 }
 
 /* pagination */
