--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -3,6 +3,7 @@
   *****************/
 .cart__row {
   width: 100%;
+  margin-top: 20px;
 }
 .cart__card {
   background-color: #faf8ff;
@@ -13,7 +14,7 @@
   align-items: center;
   justify-content: center;
   column-gap: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   background-color: #faf8ff;
   border-radius: 10px;
   padding: 15px 10px;
