--- a/src/styles/Checkout.css
+++ b/src/styles/Checkout.css
@@ -5,82 +5,52 @@
   display: flex;
   position: relative;
 }
+.checkout__header {
+  padding: 20px;
+  min-height: 150px;
+  background: rgb(255, 102, 0);
+  background-color: #fbab7e;
+  background-image: linear-gradient(62deg, #d3d3d3 0%, #f7ce68 100%);
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.checkout__header .checkout__header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.checkout__header h1 {
+  font-size: 2rem;
+  color: var(--white-color);
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.checkout__header__cards__img {
+  width: 220px;
+  height: 30px;
+  pointer-events: none;
+}
 .checkout__page__left {
   width: calc(100% - 500px);
 }
 .checkout__page__right {
   width: 500px;
-  height: 100%;
   background-color: #fafafa;
-  position: fixed;
-  top: 0;
+  /* position: fixed;
   right: 0;
-}
-
-.order__summary__toggle {
-  display: none;
-  width: 100%;
-  background-color: #faf8ff;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 10px;
-  font-weight: 500;
-  cursor: pointer;
-  transition: all 0.3s ease-in;
-}
-.order__summary__toggle:hover {
-  background-color: #eee;
-}
-.order__summary__toggle span {
-  display: flex;
-  align-items: center;
-}
-
-.order__summary__card {
-  height: 100vh;
+  top: 0;
+  bottom: 0; */
+  min-height: 100vh;
   padding: 20px;
   color: var(--second-color);
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
   border-radius: 5px;
 }
-.order__summary__card .hide__BTN {
-  display: none;
-  align-items: center;
-  color: var(--gray-6);
-  border: none;
-  padding-left: 0;
-  transition: color 0.5s ease-in-out;
-}
-.order__summary__card .hide__BTN:hover {
-  color: var(--second-color);
-  font-weight: 500;
-}
-.order__summary__card .hide__BTN i {
-  font-size: 20px;
-}
-.__card_item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 5px;
-  font-weight: 500;
-}
-.__card_item span {
-  color: var(--gray-6);
-  font-size: 18px;
-}
-.__card_item.price {
-  margin-top: 1.5rem;
-  font-size: 1.2rem;
-  font-weight: 600;
-}
 
-.__card_item.price span {
-  color: var(--primary-color);
-  font-size: 20px;
-  font-weight: 500;
-}
 .form__group {
   display: flex;
   align-items: center;
@@ -88,13 +58,22 @@
   column-gap: 1.5rem;
 }
 
-/* Steps */
+.form__group select {
+  box-shadow: unset !important;
+  color: #212529da;
+}
+.form__group select:focus {
+  border-color: var(--primary-color);
+  outline: 0;
+  box-shadow: unset !important;
+}
 
+/** Checkout Steps **/
 .steps {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
   padding-left: 0;
 }
 .steps .step-item {
@@ -152,47 +131,243 @@
   color: var(--primary-color);
   font-weight: 600;
 }
+.checkout__page .checkout__navigate__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+.checkout__page .checkout__navigate__bottom button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 3px;
+}
+.checkout__page .checkout__navigate__bottom button:first-child {
+  padding-left: 0;
+}
+.checkout__page .checkout__navigate__bottom i {
+  font-size: 18px;
+}
+
+/* Shipping Methods */
+.shipping__contact__info {
+  position: relative;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.shipping__contact__wrapper {
+  border: 1px solid rgb(217, 217, 217);
+  border-radius: 5px;
+}
+.shipping__contact__row {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 1.1rem;
+  border-bottom: 1px solid rgb(217, 217, 217);
+}
+.shipping__contact__row:last-child {
+  border-bottom: none;
+}
+.shipping__contact__row .__item__desc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 20px;
+}
+.__item__desc .__lable {
+  font-weight: 500;
+}
+.__item__desc .__text {
+}
+.shipping__contact__row .__item__action {
+}
+.__item__action button {
+  color: var(--primary-color);
+}
+.shipping__method {
+  margin: 30px 0;
+}
+.shipping__method__wrapper {
+  border: 1px solid rgb(217, 217, 217);
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+.shipping__method__row {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border-bottom: 1px solid rgb(217, 217, 217);
+
+  cursor: pointer;
+}
+.shipping__method__row:last-child {
+  border-bottom: none;
+}
+.shipping__method__row .__option {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
+/***** input[type="radio"] *****/
+.shipping__method__row .__option label {
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  padding: 8px;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+  transition: color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.shipping__method__row .__option label:hover {
+  color: var(--primary-color);
+}
+
+/*** Checkbox ***/
+.__Checkbox__label {
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  padding: 8px;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+  transition: color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.__Checkbox__label input[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 20px;
+  width: 20px;
+  background: #fff;
+  border: 2px solid #b0b0b0;
+  margin: 0 8px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  outline-offset: 5px;
+  outline-color: #b0b0b0;
+}
+.__Checkbox__label input[type="checkbox"]:after {
+  content: "";
+  display: block;
+  transform: scale(0);
+  width: 10px;
+  height: 10px;
+  border-radius: 7px;
+  transition: 120ms transform ease-in-out;
+}
+.__Checkbox__label input[type="checkbox"]:checked:after {
+  transform: scale(1);
+}
+
+.__Checkbox__label input[type="checkbox"]:checked {
+  border-color: var(--primary-color);
+}
+
+.__Checkbox__label input[type="checkbox"]:checked:after {
+  background-color: var(--primary-color);
+}
+
+/** end/ checkbox **/
+
+.shipping__method__row .__option input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 20px;
+  width: 20px;
+  background: #fff;
+  border: 2px solid #b0b0b0;
+  margin: 0 8px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  outline-offset: 5px;
+  outline-color: #b0b0b0;
+}
+.shipping__method__row .__option input[type="radio"]:disabled {
+  opacity: 0.7;
+  background: #b0b0b0;
+  cursor: not-allowed;
+}
+.shipping__method__row .__option input[type="radio"]:after {
+  content: "";
+  display: block;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+}
+
+.shipping__method__row .__option input[type="radio"]:checked:after {
+  transform: scale(1);
+}
+
+.shipping__method__row .__option input[type="radio"] {
+  border-radius: 20px;
+}
+.shipping__method__row .__option input[type="radio"]:after {
+  width: 10px;
+  height: 10px;
+  border-radius: 7px;
+}
+.shipping__method__row .__option input[type="radio"]:checked {
+  border-color: var(--primary-color);
+}
+.shipping__method__row .__option input[type="radio"]:checked:after {
+  background-color: var(--primary-color);
+}
 
 /* Payment Methods */
 .payment__container {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
-.payment__container .payment__cards__container {
+.payment__container .__card__taps__container {
   display: flex;
   align-items: center;
   justify-content: center;
   /* column-gap: 15px; */
 }
 
-.payment__card {
+.__card__tap {
   width: 50%;
   display: flex;
   align-items: center;
   transition: all 0.2s ease-in-out;
 }
-.payment__card.active {
+.__card__tap.active {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-.payment__card .card__btn {
+.__card__tap .card__btn {
   height: 70px;
   width: 100%;
   border: none;
   position: relative;
-  transition: all 0.2s ease-in-out;
-}
-
-.payment__card.active .card__btn {
-  background-color: var(--primary-color);
-  color: var(--white-color);
-  font-weight: 500;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   column-gap: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
-.payment__card.active .card__btn::before {
+.__card__tap.active .card__btn {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  font-weight: 500;
+}
+
+.__card__tap.active .card__btn::before {
   content: "";
   position: absolute;
   bottom: -15px;
@@ -203,7 +378,7 @@
   border-right: 20px solid transparent;
   border-top: 15px solid var(--primary-color);
 }
-.payment__card .card__btn::after {
+.__card__tap .card__btn::after {
   content: "\eb7b";
   font-family: "remixicon" !important;
   font-style: normal;
@@ -216,29 +391,66 @@
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
-.payment__card.active .card__btn::after {
+.__card__tap.active .card__btn::after {
   opacity: 1;
 }
-.payment__card.active .card__btn i {
+.__card__tap.active .card__btn i {
   font-size: 2rem;
   color: var(--gray-3);
 }
 
 /* payment__content */
 .payment__content {
-  padding: 30px 0;
+  padding: 20px 0;
+}
+.cash__card {
+  padding: 20px 0;
 }
 
 /*********************************
 ******** Responsive Styles *******
 **********************************/
+@media (min-width: 768px) {
+  .checkout__step__content {
+    padding: 25px 50px;
+  }
+}
+@media (max-width: 600px) {
+  .checkout__page .checkout__navigate__bottom {
+    flex-direction: column-reverse;
+  }
+  .checkout__page .checkout__navigate__bottom button {
+    margin-bottom: 1rem;
+    width: 100%;
+    justify-content: center;
+  }
+}
 @media (max-width: 768px) {
-  .payment__card .card__btn {
-    flex-direction: column;
+  .__card__tap .card__btn {
+    column-gap: 0;
+    font-size: 0.8rem;
+    padding: 0;
+    margin: 0;
+    height: 60px;
+  }
+  .__card__tap .card__btn::after {
+    display: none !important;
+    font-size: 1rem;
+  }
+  .__card__tap .card__btn i {
+    font-size: 1.3rem !important;
+  }
+
+  .form__group .form-control,
+  .form__group select {
+    margin-bottom: 1rem !important;
   }
 }
 
 @media (max-width: 998px) {
+  .checkout__page {
+    scrollbar-width: 0;
+  }
   .checkout__page__left {
     width: 100%;
   }
@@ -246,17 +458,24 @@
     width: 100%;
     /* display: none; */
     right: -100%;
+    position: fixed;
+    height: 100%;
+    overflow-y: scroll;
     transition: all 0.3s;
   }
   .isActive .checkout__page__right {
-    /* display: block; */
+    display: block;
     right: 0;
     z-index: 999;
   }
 
-  .order__summary__toggle,
-  .order__summary__card .hide__BTN {
-    display: flex !important;
+  /* scrollbar */
+  .checkout__page__right::-webkit-scrollbar {
+    width: 0;
+  }
+  /* scrollbar */
+  ::-webkit-scrollbar {
+    width: 0 !important;
   }
 }
 @media (max-width: 1200px) and (min-width: 998px) {
