--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -23,7 +23,7 @@
   margin-bottom: 30px;
 }
 .hero__heading span {
-  font-size: 5rem;
+  /* font-size: 5rem; */
   text-transform: uppercase;
 }
 .hero__heading span {
