--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -21,6 +21,11 @@
   z-index: -1;
   padding: 0;
 }
+.product:lang(ar)::after {
+  left: 0;
+  right: unset;
+  transform: translateX(-50%) !important;
+}
 .product__img {
   background-color: var(--card-bg-01);
   position: relative;
@@ -41,6 +46,11 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+.product__img:lang(ar)::after {
+  left: 0;
+  right: unset;
+  transform: translateX(-60%) !important;
 }
 
 .product__img .Fav__Button {
