--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -115,6 +115,12 @@
   transform: translateY(7px) translateX(7px);
   transition: all 0.3s ease-in;
 }
+.product__card__bottom .addCartBtn:lang(ar) {
+  border-radius: 0px 35px 0 0;
+  left: 0;
+  right: unset;
+  transform: translateY(7px) translateX(-7px);
+}
 .product__card__bottom .addCartBtn:hover {
   background-color: var(--primary-color);
 }
