--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -46,6 +46,7 @@ html {
 
 body {
   font-family: var(--en__font), sans-serif;
+  overflow-x: hidden !important;
 }
 body:lang(ar) {
   font-family: var(--ar__font), sans-serif;
